// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Snapshots Default button 1`] = `
<button
  className="app-btn"
  onClick={[Function]}
  type="button"
>
  Submit
</button>
`;

exports[`<Button /> Snapshots Reset button 1`] = `
<input
  className="app-btn app-btn--cancel"
  onClick={[Function]}
  type="reset"
  value="Cancel"
/>
`;

exports[`<Button /> Snapshots Submit button 1`] = `
<button
  className="app-btn app-btn--submit"
  onClick={[Function]}
  type="submit"
>
  Submit
</button>
`;
